Bug 1158575: Support using GDI rendering for opaque surfaces when using cross-process layers. r=jrmuizel