gfx/layers/TextureDIB.cpp
@@ -5,6 +5,8 @@
 
 #include "TextureDIB.h"
 #include "gfx2DGlue.h"
+#include "mozilla/layers/ISurfaceAllocator.h"
+#include "mozilla/ipc/ProtocolUtils.h"
 
 namespace mozilla {
 
@@ -12,37 +14,8 @@ using namespace gfx;
 
 namespace layers {
 
-DIBTextureClient::DIBTextureClient(ISurfaceAllocator* aAllocator,
-                                   gfx::SurfaceFormat aFormat,
-                                   TextureFlags aFlags)
-  : TextureClient(aAllocator, aFlags)
-  , mFormat(aFormat)
-  , mIsLocked(false)
-{
-  MOZ_COUNT_CTOR(DIBTextureClient);
-}
-
-DIBTextureClient::~DIBTextureClient()
-{
-  MOZ_COUNT_DTOR(DIBTextureClient);
-}
-
-TemporaryRef<TextureClient>
-DIBTextureClient::CreateSimilar(TextureFlags aFlags,
-                                TextureAllocationFlags aAllocFlags) const
-{
-  RefPtr<TextureClient> tex = new DIBTextureClient(mAllocator, mFormat,
-                                                   mFlags | aFlags);
-
-  if (!tex->AllocateForSurface(mSize, aAllocFlags)) {
-    return nullptr;
-  }
-
-  return tex.forget();
-}
-
 bool
-DIBTextureClient::Lock(OpenMode)
+TextureClientDIB::Lock(OpenMode)
 {
   MOZ_ASSERT(!mIsLocked);
   if (!IsValid()) {
@@ -53,7 +26,7 @@ DIBTextureClient::Lock(OpenMode)
 }
 
 void
-DIBTextureClient::Unlock()
+TextureClientDIB::Unlock()
 {
   MOZ_ASSERT(mIsLocked, "Unlocked called while the texture is not locked!");
   if (mDrawTarget) {
@@ -70,23 +43,8 @@ DIBTextureClient::Unlock()
   mIsLocked = false;
 }
 
-bool
-DIBTextureClient::ToSurfaceDescriptor(SurfaceDescriptor& aOutDescriptor)
-{
-  MOZ_ASSERT(IsValid());
-  if (!IsAllocated()) {
-    return false;
-  }
-  MOZ_ASSERT(mSurface);
-  // The host will release this ref when it receives the surface descriptor.
-  // We AddRef in case we die before the host receives the pointer.
-  aOutDescriptor = SurfaceDescriptorDIB(reinterpret_cast<uintptr_t>(mSurface.get()));
-  mSurface->AddRef();
-  return true;
-}
-
 gfx::DrawTarget*
-DIBTextureClient::BorrowDrawTarget()
+TextureClientDIB::BorrowDrawTarget()
 {
   MOZ_ASSERT(mIsLocked && IsAllocated());
 
@@ -98,8 +56,51 @@ DIBTextureClient::BorrowDrawTarget()
   return mDrawTarget;
 }
 
+TextureClientMemoryDIB::TextureClientMemoryDIB(ISurfaceAllocator* aAllocator,
+                                   gfx::SurfaceFormat aFormat,
+                                   TextureFlags aFlags)
+  : TextureClientDIB(aAllocator, aFormat, aFlags)
+{
+  MOZ_COUNT_CTOR(TextureClientMemoryDIB);
+}
+
+TextureClientMemoryDIB::~TextureClientMemoryDIB()
+{
+  MOZ_COUNT_DTOR(TextureClientMemoryDIB);
+}
+
+TemporaryRef<TextureClient>
+TextureClientMemoryDIB::CreateSimilar(TextureFlags aFlags,
+                                      TextureAllocationFlags aAllocFlags) const
+{
+  RefPtr<TextureClient> tex = new TextureClientMemoryDIB(mAllocator, mFormat,
+                                                         mFlags | aFlags);
+
+  if (!tex->AllocateForSurface(mSize, aAllocFlags)) {
+    return nullptr;
+  }
+
+  return tex.forget();
+}
+
 bool
-DIBTextureClient::AllocateForSurface(gfx::IntSize aSize, TextureAllocationFlags aFlags)
+TextureClientMemoryDIB::ToSurfaceDescriptor(SurfaceDescriptor& aOutDescriptor)
+{
+  MOZ_ASSERT(IsValid());
+  if (!IsAllocated()) {
+    return false;
+  }
+
+  MOZ_ASSERT(mSurface);
+  // The host will release this ref when it receives the surface descriptor.
+  // We AddRef in case we die before the host receives the pointer.
+  aOutDescriptor = SurfaceDescriptorDIB(reinterpret_cast<uintptr_t>(mSurface.get()));
+  mSurface->AddRef();
+  return true;
+}
+
+bool
+TextureClientMemoryDIB::AllocateForSurface(gfx::IntSize aSize, TextureAllocationFlags aFlags)
 {
   MOZ_ASSERT(!IsAllocated());
   mSize = aSize;
@@ -116,10 +117,175 @@ DIBTextureClient::AllocateForSurface(gfx::IntSize aSize, TextureAllocationFlags 
   return true;
 }
 
+TextureClientShmemDIB::TextureClientShmemDIB(ISurfaceAllocator* aAllocator,
+                                             gfx::SurfaceFormat aFormat,
+                                             TextureFlags aFlags)
+  : TextureClientDIB(aAllocator, aFormat, aFlags)
+  , mFileMapping(NULL)
+  , mHostHandle(NULL)
+  , mDC(NULL)
+  , mBitmap(NULL)
+{
+  MOZ_COUNT_CTOR(TextureClientShmemDIB);
+}
+
+TextureClientShmemDIB::~TextureClientShmemDIB()
+{
+  MOZ_COUNT_DTOR(TextureClientShmemDIB);
+
+  ::DeleteObject(mBitmap);
+  ::DeleteDC(mDC);
+  ::CloseHandle(mFileMapping);
+}
+
+TemporaryRef<TextureClient>
+TextureClientShmemDIB::CreateSimilar(TextureFlags aFlags,
+                                     TextureAllocationFlags aAllocFlags) const
+{
+  RefPtr<TextureClient> tex = new TextureClientShmemDIB(mAllocator, mFormat,
+                                                        mFlags | aFlags);
+
+  if (!tex->AllocateForSurface(mSize, aAllocFlags)) {
+    return nullptr;
+  }
+
+  return tex.forget();
+}
+
+bool
+TextureClientShmemDIB::ToSurfaceDescriptor(SurfaceDescriptor& aOutDescriptor)
+{
+  MOZ_ASSERT(IsValid());
+  MOZ_ASSERT(mAllocator->ParentPid() != base::ProcessId());
+  if (!IsAllocated() || GetFormat() == gfx::SurfaceFormat::UNKNOWN) {
+    return false;
+  }
+
+  ::GdiFlush();
+  aOutDescriptor = SurfaceDescriptorFileMapping((WindowsHandle)mHostHandle, mFormat, mSize);
+  return true;
+}
+
+bool
+TextureClientShmemDIB::AllocateForSurface(gfx::IntSize aSize, TextureAllocationFlags aFlags)
+{
+  MOZ_ASSERT(!IsAllocated());
+  MOZ_ASSERT(mAllocator->ParentPid() != base::ProcessId());
+
+  mSize = aSize;
+
+  DWORD mapSize = mSize.width * mSize.height * BytesPerPixel(mFormat);
+  mFileMapping = ::CreateFileMapping(INVALID_HANDLE_VALUE, NULL, PAGE_READWRITE, 0, mapSize, NULL);
+
+  if (!mFileMapping) {
+    gfxCriticalError() << "Failed to create memory file mapping for " << mapSize << " bytes.";
+    return false;
+  }
+
+  uint8_t* data = (uint8_t*)::MapViewOfFile(mFileMapping, FILE_MAP_WRITE | FILE_MAP_READ, 0, 0, mSize.width * mSize.height * BytesPerPixel(mFormat));
+
+  memset(data, 0x80, mSize.width * mSize.height * BytesPerPixel(mFormat));
+
+  ::UnmapViewOfFile(mFileMapping);
+
+  BITMAPV4HEADER header;
+  memset(&header, 0, sizeof(BITMAPV4HEADER));
+  header.bV4Size          = sizeof(BITMAPV4HEADER);
+  header.bV4Width         = mSize.width;
+  header.bV4Height        = -LONG(mSize.height); // top-to-buttom DIB
+  header.bV4Planes        = 1;
+  header.bV4BitCount      = 32;
+  header.bV4V4Compression = BI_BITFIELDS;
+  header.bV4RedMask       = 0x00FF0000;
+  header.bV4GreenMask     = 0x0000FF00;
+  header.bV4BlueMask      = 0x000000FF;
+
+  mDC = ::CreateCompatibleDC(::GetDC(NULL));
+
+  if (!mDC) {
+    ::CloseHandle(mFileMapping);
+    gfxCriticalError() << "Failed to create DC for bitmap.";
+    return false;
+  }
+
+  void* bits;
+  mBitmap = ::CreateDIBSection(mDC, (BITMAPINFO*)&header, DIB_RGB_COLORS, &bits, mFileMapping, 0);
+
+  if (!mBitmap) {
+    gfxCriticalError() << "Failed to create DIB section for a bitmap of size " << mSize;
+    ::CloseHandle(mFileMapping);
+    ::DeleteDC(mDC);
+    return false;
+  }
+
+  ::SelectObject(mDC, mBitmap);
+
+  mSurface = new gfxWindowsSurface(mDC, 0);
+  if (mSurface->CairoStatus())
+  {
+    ::DeleteObject(mBitmap);
+    ::DeleteDC(mDC);
+    ::CloseHandle(mFileMapping);
+    gfxCriticalError() << "Could not create surface, status: " << mSurface->CairoStatus();
+    mSurface = nullptr;
+    return false;
+  }
+
+  if (!ipc::DuplicateHandle(mFileMapping, mAllocator->ParentPid(), &mHostHandle, 0, DUPLICATE_SAME_ACCESS)) {
+    gfxCriticalError() << "Failed to duplicate handle to parent process for surface.";
+    ::DeleteObject(mBitmap);
+    ::DeleteDC(mDC);
+    ::CloseHandle(mFileMapping);
+    return false;
+  }
+
+  return true;
+}
+
+
+bool
+TextureHostDirectUpload::Lock()
+{
+  MOZ_ASSERT(!mIsLocked);
+  mIsLocked = true;
+  return true;
+}
+
+void
+TextureHostDirectUpload::Unlock()
+{
+  MOZ_ASSERT(mIsLocked);
+  mIsLocked = false;
+}
+
+void
+TextureHostDirectUpload::SetCompositor(Compositor* aCompositor)
+{
+  mCompositor = aCompositor;
+}
+
+void
+TextureHostDirectUpload::DeallocateDeviceData()
+{
+  if (mTextureSource) {
+    mTextureSource->DeallocateDeviceData();
+  }
+}
+
+bool
+TextureHostDirectUpload::BindTextureSource(CompositableTextureSourceRef& aTexture)
+{
+  if (!mTextureSource) {
+    Updated();
+  }
+
+  aTexture = mTextureSource;
+  return !!aTexture;
+}
+
 DIBTextureHost::DIBTextureHost(TextureFlags aFlags,
                                const SurfaceDescriptorDIB& aDescriptor)
-  : TextureHost(aFlags)
-  , mIsLocked(false)
+  : TextureHostDirectUpload(aFlags, SurfaceFormat::B8G8R8X8, IntSize())
 {
   // We added an extra ref for transport, so we shouldn't AddRef now.
   mSurface =
@@ -129,17 +295,6 @@ DIBTextureHost::DIBTextureHost(TextureFlags aFlags,
   mSize = mSurface->GetSize();
   mFormat = ImageFormatToSurfaceFormat(
     gfxPlatform::GetPlatform()->OptimalFormatForContent(mSurface->GetContentType()));
-}
-
-bool
-DIBTextureHost::BindTextureSource(CompositableTextureSourceRef& aTexture)
-{
-  if (!mTextureSource) {
-    Updated();
-  }
-
-  aTexture = mTextureSource;
-  return !!aTexture;
 }
 
 void
@@ -164,33 +319,44 @@ DIBTextureHost::Updated(const nsIntRegion* aRegion)
   }
 }
 
-bool
-DIBTextureHost::Lock()
+TextureHostFileMapping::TextureHostFileMapping(TextureFlags aFlags,
+                                               const SurfaceDescriptorFileMapping& aDescriptor)
+  : TextureHostDirectUpload(aFlags, aDescriptor.format(), aDescriptor.size())
+  , mFileMapping((HANDLE)aDescriptor.handle())
 {
-  MOZ_ASSERT(!mIsLocked);
-  mIsLocked = true;
-  return true;
+}
+
+TextureHostFileMapping::~TextureHostFileMapping()
+{
+  ::CloseHandle(mFileMapping);
 }
 
 void
-DIBTextureHost::Unlock()
+TextureHostFileMapping::Updated(const nsIntRegion* aRegion)
 {
-  MOZ_ASSERT(mIsLocked);
-  mIsLocked = false;
-}
-
-void
-DIBTextureHost::SetCompositor(Compositor* aCompositor)
-{
-  mCompositor = aCompositor;
-}
-
-void
-DIBTextureHost::DeallocateDeviceData()
-{
-  if (mTextureSource) {
-    mTextureSource->DeallocateDeviceData();
+  if (!mCompositor) {
+    // This can happen if we send textures to a compositable that isn't yet
+    // attached to a layer.
+    return;
   }
+
+  if (!mTextureSource) {
+    mTextureSource = mCompositor->CreateDataTextureSource(mFlags);
+  }
+
+  uint8_t* data = (uint8_t*)::MapViewOfFile(mFileMapping, FILE_MAP_READ, 0, 0, mSize.width * mSize.height * BytesPerPixel(mFormat));
+
+  if (data) {
+    RefPtr<DataSourceSurface> surf = Factory::CreateWrappingDataSourceSurface(data, mSize.width * BytesPerPixel(mFormat), mSize, mFormat);
+
+    if (!mTextureSource->Update(surf, const_cast<nsIntRegion*>(aRegion))) {
+      mTextureSource = nullptr;
+    }
+  } else {
+    mTextureSource = nullptr;
+  }
+
+  ::UnmapViewOfFile(data);
 }
 
 }
